--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="text-content">
                     <h1 class="hero-text"> Эффективные решения для вашего бизнеса </h1>
                 </div>
-            <button class="button" type="button"> Заказать услугу </button>
+            <button data-modal-open class="button" type="button"> Заказать услугу </button>
             </div>
         </section>
         
@@ -106,9 +106,30 @@
             <div class="container">
             <h2 class="work-title">Чем мы занимаемся</h2>
             <ul class="work-list list">
-                <li class="work-img"> <img src="./images/img-4.jpg" alt="Ноутбук на экране которого написан программный код" width="370"></li>
-                <li class="work-img"> <img src="./images/img-1.jpg" alt="Ноутбук на экране которого изображены три смартфона" width="370"></li>
-                <li class="work-img"> <img src="./images/img-2.jpg" alt="Планшет на экране которого изображен графический рисунок, похожий на пчелиные соты"></li>
+                <li class="work-img">
+                    <div class="work-label">
+                         <img src="./images/img-4.jpg" alt="Ноутбук на экране которого написан программный код" width="370">
+                             <div class="work-box">
+                                 <p class="work-name">Десктопные приложения</p>
+                             </div>    
+                    </div>
+                </li>
+                <li class="work-img">
+                    <div class="work-label">
+                        <img src="./images/img-1.jpg" alt="Ноутбук на экране которого изображены три смартфона" width="370">
+                            <div class="work-box">
+                                 <p class="work-name">Мобильные приложения</p>
+                            </div>
+                        </div>        
+                 </li>
+                <li class="work-img"> 
+                    <div class="work-label">
+                         <img src="./images/img-2.jpg" alt="Планшет на экране которого изображен графический рисунок, похожий на пчелиные соты">
+                            <div class="work-box">
+                                 <p class="work-name">Дизайнерские решения</p> 
+                            </div>     
+                    </div>
+                </li>
             </ul>
             </div>
         </section>
@@ -316,7 +337,19 @@
                 </ul>
             </div>
         </section>
+
+    <!-- Модальное окно -->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button data-modal-close class="modal-btn">
+                <svg class="modal-icon" width="11px" height="11px">
+                    <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
     </main>
+
     <!-- Адрес -->
     <footer class="footer">
         <div class="container position">
@@ -364,5 +397,6 @@
         </div>
         
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
