Додано розмітку в секцію "projects"

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,16 +62,33 @@
         <h1 class="visually-hidden">Выполненные проекты</h1>    
             <ul class="projects list">
                 <li class="projects-list"> 
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-5.jpg" alt="Портфолио разработчиков Веб-сайтов" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-5.jpg" alt="Портфолио разработчиков Веб-сайтов" width="370">
+                                <div class="projects-description">
+                                     <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                     </p>
+                                </div>     
+                       </div>  
                        <div class="projects-content">
                          <h1 class="projects-item"> Технокряк </h1>
-                         
                          <p class="projects-text"> Веб-сайт </p>
                        </div>
                     </a>
                 </li>
                 <li class="projects-list">
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-6.jpg" alt="Волейболисты" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-6.jpg" alt="Волейболисты" width="370">
+                                <div class="projects-description">
+                                    <p class="description">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>           
                        <div class="projects-content">
                          <h2 class="projects-item"> Постер <span lang="en">Orlean vs Golden Star</span></h2>
                          <p class="projects-text"> Дизайн </p>
@@ -79,7 +96,16 @@
                     </a>
                 </li>
                 <li class="projects-list">
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-7.jpg" alt="Торговая марка рыбного ресторана" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-7.jpg" alt="Торговая марка рыбного ресторана" width="370">
+                                <div class="projects-description">
+                                    <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>     
                        <div class="projects-content">
                          <h2 class="projects-item"> Ресторан <span lang="en">Seafood</span></h2>
                          <p class="projects-text"> Приложение </p>
@@ -87,7 +113,16 @@
                     </a>
                 </li>
                 <li class="projects-list"> 
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-8.jpg" alt="Наушники" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-8.jpg" alt="Наушники" width="370">
+                                <div class="projects-description">
+                                    <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>
                        <div class="projects-content">
                          <h2 class="projects-item"> Проект <span lang="en">Prime</span></h2>
                          <p class="projects-text"> Маркетинг </p>
@@ -95,7 +130,16 @@
                     </a>
                 </li>
                 <li class="projects-list">
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-9.jpg" alt="Коробки" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-9.jpg" alt="Коробки" width="370">
+                                <div class="projects-description">
+                                    <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>
                        <div class="projects-content">
                          <h2 class="projects-item"> Проект <span lang="en">Boxes</span></h2>
                         <p class="projects-text"> Приложение </p>
@@ -103,7 +147,16 @@
                     </a>
                 </li>
                 <li class="projects-list">
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-10.jpg" alt="Монитор компьютера" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-10.jpg" alt="Монитор компьютера" width="370">
+                                <div class="projects-description">
+                                     <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>
                        <div class="projects-content">
                          <h2 class="projects-item"> <span lang="en">Inspiration has no Borders</span></h2>
                          <p class="projects-text"> Веб-сайт </p>
@@ -111,7 +164,16 @@
                     </a>
                 </li>
                 <li class="projects-list">
-                    <a  class="projects-link decoration" href=""><img class="projects-img" src="./images/img-11.jpg" alt="Открытая книга" width="370">
+                    <a  class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-11.jpg" alt="Открытая книга" width="370">
+                                <div class="projects-description">
+                                    <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>
                        <div class="projects-content">
                           <h2 class="projects-item"> Издание <span lang="en">Limited Edition</span></h2>
                           <p class="projects-text"> Дизайн </p>
@@ -119,7 +181,16 @@
                     </a>
                 </li>
                 <li class="projects-list">
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-12.jpg" alt="Брелок с названием проекта" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-12.jpg" alt="Брелок с названием проекта" width="370">
+                                <div class="projects-description">
+                                    <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>
                        <div class="projects-content">
                          <h2 class="projects-item"> Проект <span lang="en">LAB</span></h2>
                          <p class="projects-text"> Маркетинг </p>
@@ -127,7 +198,16 @@
                     </a>
                 </li>
                 <li class="projects-list">
-                    <a class="projects-link decoration" href=""><img class="projects-img" src="./images/img-13.jpg" alt="Ноутбук" width="370">
+                    <a class="projects-link decoration" href="">
+                        <div class="projects-overlay">
+                             <img class="projects-img" src="./images/img-13.jpg" alt="Ноутбук" width="370">
+                             <div class="projects-description">
+                                     <p class="description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                        </div>
                        <div class="projects-content">
                          <h2 class="projects-item"> <span lang="en">Growing Business</span></h2>
                          <p class="projects-text"> Приложение </p>
